# twitter-clone

./: README.md  pyproject.toml
config/: db.sqlite3
config/config/: settings.py  urls.py
config/homepage_app/: views.py
config/templates/: index.html  login.html  navbar.html  signup.html
config/user_app/: admin.py  forms.py  models.py
config/user_app/migrations/: 0001_initial.py
